--- a/src/components/job/jobHeader.css
+++ b/src/components/job/jobHeader.css
@@ -3,19 +3,24 @@
   /* title */
 
   .jobTitle {
-    margin: 90px 65px;
+    /* margin: 90px 65px; */
+    width: 100%;
+    height: 150px;
+    background-color: #266f37;
+    opacity: 0.9;
+    padding: 20px 0 30px 30px;
   }
   .jobTitle h1 {
     font-weight: bold;
-    color: #777777;
+    color: #fff;
     font-size: 28px;
     margin-bottom: 10px;
   }
 
   .jobTitle h2 {
-    color: #aaaaaa;
+    color: #fff;
     font-size: 18px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
   }
 
   /* menu */
@@ -53,19 +58,26 @@
   /* title */
 
   .jobTitle {
-    margin: 90px 65px;
+    /* margin: 90px 65px; */
+    /* align-items: center;
+    display: flex; */
+    width: 100%;
+    height: 150px;
+    background-color: #266f37;
+    opacity: 0.9;
+    padding: 20px 0 30px 30px;
   }
   .jobTitle h1 {
     font-weight: bold;
-    color: #777777;
+    color: #fff;
     font-size: 28px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
   }
 
   .jobTitle h2 {
-    color: #aaaaaa;
+    color: #fff;
     font-size: 18px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
   }
 
   /* menu */
