--- a/src/components/job/jobintro.css
+++ b/src/components/job/jobintro.css
@@ -1,6 +1,7 @@
 /* 취업과정 intro 페이지 PC.ver */
 @media screen and (min-width: 768px) {
   .jobIntroTitle {
+    position: relative;
     display: flex;
     justify-content: center;
     background: url("/public/images/job-search.png") no-repeat top left 120px;
@@ -17,26 +18,44 @@
 
   .jobIntroBox {
     margin: auto;
+    position: relative;
     width: 900px;
     background-color: #f4f4f4;
     padding: 20px 50px;
     border-radius: 7px;
     margin-bottom: 100px;
   }
+  .jobIntroBox::before {
+    content: "";
+    background: url("/public/images/pixabay/KakaoTalk_20220319_225210294_08-min.png")
+      no-repeat;
+    background-size: 900px 500px;
+    opacity: 0.35;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0px;
+    bottom: 0px;
+  }
 
   .jobIntroContents {
+    position: relative;
     text-align: center;
   }
   .jobIntroContents dt {
+    position: relative;
     font-size: 20px;
   }
   .jobIntroContents dd {
+    position: relative;
     padding: 10px 0;
+    color: #454545;
   }
 }
 /* 취업과정 intro 페이지 mobile.ver */
 @media screen and (max-width: 768px) {
   .jobIntroTitle {
+    position: relative;
     display: flex;
     justify-content: center;
     background: url("/public/images/job-search.png") no-repeat top center;
@@ -54,19 +73,36 @@
   .jobIntroBox {
     margin: auto;
     width: 600px;
-    background-color: #f4f4f4;
+    position: relative;
     padding: 20px 50px;
     border-radius: 7px;
     margin-bottom: 100px;
   }
+  .jobIntroBox::before {
+    content: "";
+    background: url("/public/images/pixabay/KakaoTalk_20220319_225210294_08-min.png")
+      no-repeat;
+    background-size: 640px 500px;
+    opacity: 0.35;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0px;
+    bottom: 0px;
+  }
 
   .jobIntroContents {
+    position: relative;
     text-align: center;
   }
   .jobIntroContents dt {
+    position: relative;
     font-size: 18px;
+    padding-top: 10px;
   }
   .jobIntroContents dd {
+    position: relative;
     padding: 10px 0;
+    color: #454545;
   }
 }
