--- a/src/components/job/jobrecruit.css
+++ b/src/components/job/jobrecruit.css
@@ -17,6 +17,9 @@
     border-radius: 40px;
     margin-bottom: 20px;
   }
+  .jobContentsBox .jobThumImg:hover {
+    animation: fadein 0.6s ease-in;
+  }
   .jobContentsBox .thumText {
     margin-left: 20px;
     color: #454545;
@@ -42,6 +45,11 @@
     border: 1px solid #dddddd;
     border-radius: 30px;
     margin-bottom: 20px;
+    overflow: hidden;
+    transition: 0.7s ease-in;
+  }
+  .jobContentsBox .jobThumImg:hover {
+    transform: scale(1.4);
   }
   .jobContentsBox .thumText {
     margin-left: 10px;
