[modify] curriculum 버튼 이벤트 구현 / infoinput_table input type 수정 / program state 수정

--- a/src/components/program/infoinput.css
+++ b/src/components/program/infoinput.css
@@ -19,7 +19,9 @@ th, td{
     border: 1px solid #f3f3f3;
 }
 
-.infoTable tbody tr td input[type=text] {
+.infoTable tbody tr td input[type=text],
+.infoTable tbody tr td input[type=tel],
+.infoTable tbody tr td input[type=email] {
     border: none;
     outline: none;
     width: 100%;
