[ modify ] 모바일 반응형

--- a/src/components/mypage/AccountWithdrawal.css
+++ b/src/components/mypage/AccountWithdrawal.css
@@ -139,12 +139,12 @@
   display: block;
 }
 
-/* PC Main CSS */
+/* PC  CSS */
 @media screen and (min-width:768px) {
 
 }
 
-/* 모바일 Main CSS */
+/* 모바일  CSS */
 @media screen and (max-width:767px) {
   
 }
