--- a/src/components/main/banner.css
+++ b/src/components/main/banner.css
@@ -1,6 +1,6 @@
 @media screen and (min-width:768px) {
 
-  .main-wrapper .main-banner-box{
+  /* .main-wrapper .main-banner-box{
     position: relative;
     width: 100%;
     min-height: 90vh;
@@ -14,14 +14,14 @@
   }
   .main-wrapper .IntroduceBox{
     height: 90vh;
-  }
+  } */
 
 
   /* swiper 페이지네이션  */
-  .main-banner .swiper-pagination {
+  /* .main-banner .swiper-pagination {
     position: absolute;
     left: 44%;
-  }
+  } */
 
   .main-banner .swiper-pagination-bullet {
     width: 14px;
@@ -55,7 +55,7 @@
     content: '';
     display: block;
     width: 100%;
-    height: 90vh;
+    height: 450px;
   }
  
   .main-banner .swiper-slide-active .panel-img{
@@ -168,7 +168,10 @@
   /* background: url('/public/images/green.png') no-repeat; */
   background-color: #C8E5B0;
 }
-.main-banner .swiper-slide:last-child:before{
+.main-banner .swiper-slide:nth-child(2):before{
   /* background: url('/public/images/main/blue-banner.jpg') no-repeat; */
   background-color: #18222B;
+}
+.main-banner .swiper-slide:last-child:before{
+  background: url('/public/images/main/banner2.jpg') no-repeat; 
 }
