[modify] 프로그램 상세보기,과정신청 링크 연결

--- a/src/components/academy/Recruit.css
+++ b/src/components/academy/Recruit.css
@@ -36,12 +36,14 @@
 }
 .recruit-wrap .form-title span.ess:after {
   position: absolute;
-  top: 2px;
-  right: -10px;
-  content: "*";
+  top: 8px;
+  right: -15px;
+  content: "";
   clear: both;
-  color: #ed3b46;
-  height: 10px;
+  background-color: #03a65a;
+  width: 8px;
+  height:8px;
+  border-radius: 50%;
 }
 .recruit-wrap .form-cont .count-input {
   position: relative;
