--- a/src/components/job/mobileJobViewDetail.css
+++ b/src/components/job/mobileJobViewDetail.css
@@ -123,8 +123,6 @@
     padding-bottom: 5px;
     word-break: keep-all;
   }
-  #processObjective .processObjective-right .flexStyle {
-  }
   #processObjective .processObjective-right {
     flex-basis: 40%;
     margin-top: 50px;
@@ -212,21 +210,21 @@
     list-style: disc;
   }
   /*  mainTutor */
-  .mainTutorBox {
+  .mainTutorBox.job {
     display: flex;
     margin: auto;
   }
-  .mainTutorLeft {
+  .job .mainTutorLeft {
     position: relative;
   }
-  .mainTutorLeft img {
+  .job .mainTutorLeft img {
     border: 1px solid #ccc;
     border-radius: 5px;
     width: 300px;
     height: 250px;
     margin-bottom: 10px;
   }
-  .mainTutorLeft p {
+  .job .mainTutorLeft p {
     border: 1px solid #ccc;
     border-radius: 5px;
     width: 300px;
@@ -234,58 +232,58 @@
     line-height: 50px;
     text-align: center;
   }
-  .mainTutorRight {
+  .job .mainTutorRight {
     display: flex;
     flex-wrap: wrap;
     margin-left: 20px;
   }
-  .mainTutorLeft a:hover p {
+  .job .mainTutorLeft a:hover p {
     font-weight: bold;
     color: #5ebf92;
   }
-  .mainTutorRight .mainTutorInfo {
+  .job .mainTutorRight .mainTutorInfo {
     border: 1px solid #ccc;
     border-radius: 5px;
     width: 330px;
     height: 310px;
   }
-  .mainTutorRight .mainTutorInfo p:first-child {
+  .job .mainTutorRight .mainTutorInfo p:first-child {
     text-align: center;
     font-size: 20px;
     padding-top: 30px;
   }
-  .mainTutorRight .mainTutorInfo p:last-child {
+  .job .mainTutorRight .mainTutorInfo p:last-child {
     padding-left: 50px;
     padding-top: 100px;
   }
-  .mainTutorRight .mainTutorInfo p:last-child span {
+  .job .mainTutorRight .mainTutorInfo p:last-child span {
     font-size: 28px;
   }
-  .mainTutorRight .mainTutorRigthBottom {
+  .job .mainTutorRight .mainTutorRigthBottom {
     display: flex;
     position: absolute;
     left: 50px;
     margin-top: 320px;
     height: 195px;
   }
-  .mainTutorRight .mainTutorRigthBottom p {
+  .job .mainTutorRight .mainTutorRigthBottom p {
     font-size: 20px;
     padding: 15px 0 0 15px;
   }
-  .mainTutorRight .mainTutorRigthBottom .mainTutorCareer {
+  .job .mainTutorRight .mainTutorRigthBottom .mainTutorCareer {
     border: 1px solid #ccc;
     border-radius: 5px;
     width: 300px;
     margin-right: 10px;
   }
-  .mainTutorRight .mainTutorRigthBottom .mainTutorPlace {
+  .job .mainTutorRight .mainTutorRigthBottom .mainTutorPlace {
     border: 1px solid #ccc;
     border-radius: 5px;
     width: 330px;
     margin-left: 10px;
   }
-  .mainTutorRight .mainTutorRigthBottom .mainTutorCareer ul,
-  .mainTutorRight .mainTutorRigthBottom .mainTutorPlace ul {
+  .job .mainTutorRight .mainTutorRigthBottom .mainTutorCareer ul,
+  .job .mainTutorRight .mainTutorRigthBottom .mainTutorPlace ul {
     padding-left: 20px;
   }
 
