--- a/src/components/program/curriculum.css
+++ b/src/components/program/curriculum.css
@@ -1,147 +1,279 @@
-button {
-    background: transparent;
-    border: none;
-    outline: none;
+/* 공개과정 Curriculum 페이지 PC.ver */
+@media screen and (min-width: 768px) {
+    
+    button {
+        background: transparent;
+        border: none;
+        outline: none;
+    }
+
+    * {
+        color: #636363;
+    }
+
+    .wrapper {
+        position: relative;
+    }
+
+    .topDetailpage {
+        display: flex;
+        justify-content: space-evenly;
+        margin: 50px 0;
+    }
+
+    .topDetailpage .left {
+        display: flex;
+    }
+
+    .topDetailpage .detailpageImg img {
+        border-radius: 10px;
+        width: 500px;
+    }
+    .topDetailpage .detailpageTxt {
+        padding-left: 50px;
+    }
+
+    .topDetailpage .detailpageTxt .detailpageTitle {
+        font-size: 35px;
+        font-weight: bold;
+        padding-bottom: 20px;
+    }
+
+    .topDetailpage .detailpageTxt .detailpageUl {
+        display: flex;
+    }
+
+    .topDetailpage .detailpageTxt .detailpageUl ul li {
+        padding-bottom: 10px;
+    }
+
+    .topDetailpage .detailpageTxt .detailpageUl .subtitle {
+        font-weight: bold;
+        margin-right: 30px;
+    }
+
+    .topDetailpage .detailpageTxt .btnUl ul li {
+        display: inline-block;
+        padding: 5px 20px;
+        margin-right: 20px;
+        margin-top: 10px;
+        border: 1px solid #636363;
+        border-radius: 5px;
+        font-size: 14px;
+        cursor: pointer;
+    }
+
+    .topDetailpage .right .shareBtn {
+        background: none;
+        border: none;
+        cursor: pointer;
+    }
+
+    .topDetailpage .right .shareBtn {
+        padding-left: 5px;
+        padding-right: 20px;
+        display: block;
+        font-size: 20px;
+        background: url(/public/images/share.png) no-repeat 40px center;
+        background-size: 20px;
+    }
+
+    .bottomSelectFix {
+        padding: 20px 0;
+        display: none;
+        position: absolute;
+        right: 15%;
+    }
+
+    .bottomSelectFix.fix {
+        display: block;
+        position: fixed;
+        top: 71px;
+        z-index: 1001;
+        padding-top: 20px;
+    }
+
+    .bottomSelectFix button {
+        padding: 2px 30px;
+        margin-left: 20px;
+        margin-right: 30px;
+        border: 1px solid #636363;
+        border-radius: 5px;
+        font-size: 14px;
+        cursor: pointer;
+        background-color: #fff;
+    }
+
+    .bottomDetailpage .category {
+        width: 100%;
+        padding-bottom: 20px;
+    }
+
+    .bottomDetailpage .category li {
+        border-radius: 15px;
+        background-color: #F4F4F4;
+        display: inline-block;
+        padding: 8px 30px;
+        margin-right: 20px;
+        font-size: 14px;
+        cursor: pointer;
+    }
+
+
+    /* 상단 고정탭 */
+
+    .bottomDetailpage .category li.scrollOn {
+        color: #fff;
+        background-color: #5ebf92;
+        font-weight: bold;
+        box-sizing: border-box;
+    }
+
+    .bottomDetailpage .category.fix {
+        position: fixed;
+        top: 72px;
+        z-index: 1000;
+        padding-top: 20px;
+        background-color:rgba(255, 255, 255, 0.9);
+    }
+
+    .scrollTopBtn {
+        position: fixed;
+        bottom: 40px;
+        right: 40px;
+        width: 50px;
+        height: 50px;
+        border-radius: 100%;
+        border: 0 none;
+        color: #fff;
+        background-color: #5ebf92;
+    }
+
 }
 
-* {
-    color: #636363;
-}
+/* 모바일 */
+@media screen and (max-width: 768px) {
 
-.wrapper {
-    position: relative;
-}
+    * {
+        color: #636363;
+    }
+    button {
+        background: transparent;
+        border: none;
+        outline: none;
+    }
+    
+    .topDetailpage {
+        position: relative;
+    }
+    .topDetailpage {
+        display: flex;
+        justify-content: space-evenly;
+        margin: 50px 0;
+    }
+    
+    .topDetailpage .left {
+        display: flex;
+    }
+    
+    .topDetailpage .detailpageImg img {
+        border-radius: 10px;
+        width: 300px;
+    }
+    .topDetailpage .detailpageTxt {
+        padding-left: 30px;
+    }
+    
+    .topDetailpage .detailpageTxt .detailpageTitle {
+        font-size: 25px;
+        font-weight: bold;
+        padding-bottom: 10px;
+    }
+    
+    .topDetailpage .detailpageTxt .detailpageUl {
+        display: flex;
+    }
+    
+    .topDetailpage .detailpageTxt .detailpageUl ul li {
+        padding-bottom: 5px;
+    }
+    
+    .topDetailpage .detailpageTxt .detailpageUl .subtitle {
+        font-weight: bold;
+        margin-right: 20px;
+    }
+    
+    .topDetailpage .detailpageTxt .btnUl ul li {
+        display: inline-block;
+        padding: 5px 10px;
+        margin-right: 5px;
+        font-size: 16px;
+    }
+    
+    .topDetailpage .detailpageTxt .btnUl .jobShareBtn {
+        padding-left: 5px;
+        padding-right: 20px;
+        display: block;
+        background: url(/public/images/share.png) no-repeat 35px center;
+        background-size: 16px;
+        cursor: pointer;
+    }
+    .bottomSelectFix {
+        padding: 20px 0;
+        display: none;
+        position: absolute;
+        right: 15%;
+    }
+    
+    .bottomSelectFix.fix {
+        display: block;
+        position: fixed;
+        top: 0;
+        z-index: 1001;
+        padding-top: 80px;
+    }
+    
+    .bottomSelectFix button {
+        padding: 2px 30px;
+        margin-left: 20px;
+        margin-right: 30px;
+        border: 1px solid #636363;
+        border-radius: 5px;
+        font-size: 14px;
+        cursor: pointer;
+        background-color: #fff;
+    }
+    
+    .bottomDetailpage .category {
+        width: 100%;
+        height: 150px;
+    
+        padding-bottom: 20px;
+    }
+    
+    .bottomDetailpage .category li {
+        border-radius: 15px;
+        background-color: #f4f4f4;
+        display: inline-block;
+        padding: 8px 30px;
+        margin-right: 10px;
+        font-size: 14px;
+    }
+    .bottomDetailpage .category li.scrollOn {
+        color: #fff;
+        background-color: #5ebf92;
+        font-weight: bold;
+        box-sizing: border-box;
+    }
+    
+    /* 상단 고정탭 */
+    .bottomDetailpage .category.fix {
+        position: fixed;
+        top: 0;
+        z-index: 1;
+        padding: 20px 0;
+        background-color: rgba(255, 255, 255, 0.9);
+        padding-left: 30px;
+    }
 
-.topDetailpage {
-    display: flex;
-    justify-content: space-evenly;
-    margin: 50px 0;
-}
-
-.topDetailpage .left {
-    display: flex;
-}
-
-.topDetailpage .detailpageImg img {
-    border-radius: 10px;
-    width: 500px;
-}
-.topDetailpage .detailpageTxt {
-    padding-left: 50px;
-}
-
-.topDetailpage .detailpageTxt .detailpageTitle {
-    font-size: 35px;
-    font-weight: bold;
-    padding-bottom: 20px;
-}
-
-.topDetailpage .detailpageTxt .detailpageUl {
-    display: flex;
-}
-
-.topDetailpage .detailpageTxt .detailpageUl ul li {
-    padding-bottom: 10px;
-}
-
-.topDetailpage .detailpageTxt .detailpageUl .subtitle {
-    font-weight: bold;
-    margin-right: 30px;
-}
-
-.topDetailpage .detailpageTxt .btnUl ul li {
-    display: inline-block;
-    padding: 5px 20px;
-    margin-right: 20px;
-    margin-top: 10px;
-    border: 1px solid #636363;
-    border-radius: 5px;
-    font-size: 14px;
-    cursor: pointer;
-}
-
-.topDetailpage .right .shareBtn {
-    background: none;
-    border: none;
-    cursor: pointer;
-}
-
-.topDetailpage .right .shareBtn {
-    padding-left: 5px;
-    padding-right: 20px;
-    display: block;
-    font-size: 20px;
-    background: url(/public/images/share.png) no-repeat 40px center;
-    background-size: 20px;
-}
-
-.bottomSelectFix {
-    padding: 20px 0;
-    display: none;
-    position: absolute;
-    right: 15%;
-}
-
-.bottomSelectFix.fix {
-    display: block;
-    position: fixed;
-    top: 71px;
-    z-index: 1001;
-    padding-top: 20px;
-}
-
-.bottomSelectFix button {
-    padding: 2px 30px;
-    margin-left: 20px;
-    margin-right: 30px;
-    border: 1px solid #636363;
-    border-radius: 5px;
-    font-size: 14px;
-    cursor: pointer;
-    background-color: #fff;
-}
-
-.bottomDetailpage .category {
-    width: 100%;
-    padding-bottom: 20px;
-}
-
-.bottomDetailpage .category li {
-    border-radius: 15px;
-    background-color: #F4F4F4;
-    display: inline-block;
-    padding: 8px 30px;
-    margin-right: 20px;
-    font-size: 14px;
-    cursor: pointer;
-}
-
-
-/* 상단 고정탭 */
-
-.bottomDetailpage .category li.scrollOn {
-    color: #fff;
-    background-color: #5ebf92;
-    font-weight: bold;
-    box-sizing: border-box;
-}
-
-.bottomDetailpage .category.fix {
-    position: fixed;
-    top: 72px;
-    z-index: 1000;
-    padding-top: 20px;
-    background-color:rgba(255, 255, 255, 0.9);
-}
-
-.scrollTopBtn {
-    position: fixed;
-    bottom: 40px;
-    right: 40px;
-    width: 50px;
-    height: 50px;
-    border-radius: 100%;
-    border: 0 none;
-    color: #fff;
-    background-color: #5ebf92;
 }
