--- a/src/components/program/program.css
+++ b/src/components/program/program.css
@@ -9,104 +9,124 @@ th, td{
     padding:0;
 }
 
+/* pc */
+@media screen and (min-width:768px){ 
 
-.tableSection {
-    margin: 100px auto 150px;
-}
+    .mainBannerHeight .swiper-slide::before{
+        content: '';
+        display: block;
+        width: 100%;
+        height: 450px;
+    }
 
-.tableSection .top {
-    position: relative;
-    margin-top: 50px;
-}
+    .tableSection {
+        margin: 100px auto 150px;
+    }
 
-.tableSection .top .downloadBtn {
-    font-size: 14px;
-    padding: 5px 10px 5px 30px;
-    border-radius: 10px;
-    border: 1px solid #bbb;
-    cursor: pointer;
-    position: absolute;
-    background: url(../../../public/images/share.png) no-repeat;
-    background-size: 25px;
-    font-weight: 300;
-}
+    .tableSection .top {
+        position: relative;
+        margin-top: 50px;
+    }
 
-.tableSection .top .date {
-    font-size: 30px;
-    text-align: center;
-}
+    .tableSection .top .downloadBtn {
+        font-size: 14px;
+        padding: 5px 10px 5px 30px;
+        border-radius: 10px;
+        border: 1px solid #bbb;
+        cursor: pointer;
+        position: absolute;
+        background: url(../../../public/images/share.png) no-repeat;
+        background-size: 25px;
+        font-weight: 300;
+    }
 
-.tableSection .top .date h3 {
-    display: inline;
-}
+    .tableSection .top .date {
+        font-size: 30px;
+        text-align: center;
+    }
 
-.tableSection .top .date button {
-    width: 50px;
-    height: 50px;
-    display: inline-block;
-    border: none;
-    text-indent: -9999px;
-    cursor: pointer;
-}
+    .tableSection .top .date h3 {
+        display: inline;
+    }
 
-.tableSection .top .date .btnPrev {
-    background: url(../../../public/images/arrow_prev.png) no-repeat center;
-    background-size: 25px;
-    padding-top: 5px;
-}
-.tableSection .top .date .btnNext {
-    background: url(../../../public/images/arrow_next.png) no-repeat center;
-    background-size: 25px;
-    padding-top: 5px;
-}
+    .tableSection .top .date button {
+        width: 50px;
+        height: 50px;
+        display: inline-block;
+        border: none;
+        text-indent: -9999px;
+        cursor: pointer;
+    }
 
-/* .tableSection .top .searchBox {
-    width: 250px;
-    height: 40px;
-    margin: 20px 0;
-    text-indent: 50px;
-    border: none;
-    font-size: 16px;
-    border-radius: 50px;
-    float: right;
-    outline: none;
-    background: url(../../../public/images/search.png) no-repeat;
-    background-position: 16px center;
-    background-size: 16px 16px;
-    background-color: #f3f3f3;
-} */
+    .tableSection .top .date .btnPrev {
+        background: url(../../../public/images/arrow_prev.png) no-repeat center;
+        background-size: 25px;
+        padding-top: 5px;
+    }
+    .tableSection .top .date .btnNext {
+        background: url(../../../public/images/arrow_next.png) no-repeat center;
+        background-size: 25px;
+        padding-top: 5px;
+    }
 
-.programSearch {
-    float: right;
-    margin: 20px 0;
-}
+    /* .tableSection .top .searchBox {
+        width: 250px;
+        height: 40px;
+        margin: 20px 0;
+        text-indent: 50px;
+        border: none;
+        font-size: 16px;
+        border-radius: 50px;
+        float: right;
+        outline: none;
+        background: url(../../../public/images/search.png) no-repeat;
+        background-position: 16px center;
+        background-size: 16px 16px;
+        background-color: #f3f3f3;
+    } */
 
-.programTable {
-    width: 100%;
-    border: 1px solid #f3f3f3;
-}
+    .programSearch {
+        float: right;
+        margin: 20px 0;
+    }
 
-.programTable thead {
-    border-bottom: 1px solid #c8c8c8;
-}
+    .programTable {
+        width: 100%;
+        border: 1px solid #f3f3f3;
+    }
 
-.programTable thead tr th, .programTable tr th {
-    text-align: center;
-}
+    .programTable thead {
+        border-bottom: 1px solid #c8c8c8;
+    }
 
-.programTable tr:nth-child(odd) {
-    background-color: #F4F4F4;
-}
+    .programTable thead tr th, .programTable tr th {
+        text-align: center;
+    }
 
-.programTable tr th, .programTable tr td {
-    padding: 20px;
-}
+    .programTable tr:nth-child(odd) {
+        background-color: #F4F4F4;
+    }
 
-.programTable th {
-    font-weight: bold;
-}
+    .programTable tr th, .programTable tr td {
+        padding: 20px;
+    }
 
-.programTable tbody tr td {
-    font-weight: 400;
-    text-align: left;
+    .programTable th {
+        font-weight: bold;
+    }
+
+    .programTable tbody tr td {
+        font-weight: 400;
+        text-align: left;
+    }
+
+} /* pc 끝 */
+
+/* 모바일 */
+@media screen and (max-width:767px){
+
+    .tableSection {
+        
+    }
+
 }
