[modify] 페이지 타이틀 및 리스트 CSS 수정

--- a/src/components/customer/notice.css
+++ b/src/components/customer/notice.css
@@ -6,7 +6,7 @@
     margin: 0 auto;
     padding: 0;
   }
-  .notice-title,
+  /* .notice-title,
   .question-title {
     margin: 90px 65px;
   }
@@ -22,7 +22,7 @@
     color: #aaaaaa;
     font-size: 18px;
     margin-bottom: 20px;
-  }
+  } */
   .question-table {
     margin-top: 185px;
   }
