--- a/src/components/mypage/headTitle.css
+++ b/src/components/mypage/headTitle.css
@@ -1,24 +1,27 @@
 
 /* PC  CSS */
 @media screen and (min-width:768px) {
-  /* .menu-titlebox {
-    width: 100vw;
-    margin: 0 15px;
+  .menu-titlebox {
+    margin: 90px 65px; 
+    width: 100%;
+    height: 150px;
+    background-color: #266f37;
+    opacity: 0.9;
+    padding: 20px 0 30px 30px;
   }
   
   h1.menu-headtitle {
-    font-size: 40px;
-    letter-spacing: -0.8;
-    color: #212529;
-    margin-bottom: 7px;
-    margin-top: 30px;
+    font-weight: bold;
+    color: #fff;
+    font-size: 28px;
+    margin-bottom: 10px;
   }
   
   p.menu-subtitle {
-    font-size: 20px;
-    color: #212529;
-    margin-bottom: 50px;
-  } */
+    color: #fff;
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
   
 }
 
