[ modify ] 공통 타이틀 css 적용

--- a/src/components/mypage/headTitle.css
+++ b/src/components/mypage/headTitle.css
@@ -1,26 +1,30 @@
 
 /* PC  CSS */
 @media screen and (min-width:768px) {
+  .menu-titlebox #inner-box {
+    width: 1300px;
+    margin: 0 auto;
+  }
+ 
   .menu-titlebox {
-    margin: 90px 65px; 
-    width: 100%;
+    align-items: center;
+    display: flex;
+    width: 100vw;
     height: 150px;
     background-color: #266f37;
     opacity: 0.9;
-    padding: 20px 0 30px 30px;
   }
   
-  h1.menu-headtitle {
+  .menu-titlebox h2.menu-headtitle {
     font-weight: bold;
     color: #fff;
     font-size: 28px;
     margin-bottom: 10px;
   }
   
-  p.menu-subtitle {
+  .menu-titlebox h3.menu-subtitle {
     color: #fff;
     font-size: 18px;
-    margin-bottom: 20px;
   }
   
 }
