[ modfy ] 신청취소 페이지 취소안내창 뜨도록 조정

--- a/src/components/mypage/regiConfirm.css
+++ b/src/components/mypage/regiConfirm.css
@@ -99,7 +99,8 @@
     background-color: #eee;
     border-radius: 40px;
     padding: 40px 40px;
-    width: 550px;
+    width: 700px;
+    text-align: center;
   }
 
   .notice-noRegiClass h3 {
