[modify] css 수정 / infoinput 교육생정보 오류 코드 수정

--- a/src/components/program/view-detail.css
+++ b/src/components/program/view-detail.css
@@ -117,8 +117,12 @@
     height: 40%;
 }
 
+#processObjective .processObjective-right ul li {
+  text-align: center;
+}
+
 #processObjective .processObjective-right ul li img {
-  width: 100%;
+  width: 60%;
 }
 
 /* 교육대상 */
